add team and contact pages

--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -3,6 +3,6 @@
 {% block title %}{{ parent() }}Accueil{% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary"> Share : partagez vos fichiers </h1>
+    <h1 class="text-center text-primary">Page d'accueil</h1>
 
 {% endblock %}
