--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://bootswatch.com/5/lumen/bootstrap.min.css" rel="stylesheet">
    {% endblock %}
-    <title>{% block title %}Share - {% endblock %}</title>
+    <title>{% block title %}Cactus Esport - {% endblock %}</title>
   </head>
   <body>
    
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{{path('index')}}">Cactus Esport</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,34 +23,28 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
-            <span class="visually-hidden">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link active " href="#">Shop</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Nos équipes</a>
           <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="{{path('rainbow-six')}}">Rainbow Six Siege</a>
+            <a class="dropdown-item" href="{{path('master-duel')}}">Yu-Gi-Oh ! Master Duel</a>
+            <a class="dropdown-item" href="{{path('rocket-league')}}">Rocket League</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
           </div>
         </li>
+        
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Actualités</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#">A propos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{{path('contact')}}">Contact</a>
+        </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
