--- a/templates/base/contact.html.twig
+++ b/templates/base/contact.html.twig
@@ -43,9 +43,15 @@
                     Rejoins-nous sur notre serveur Discord Communautaire !<span class="emoji">&#127797</span>
                 </li>         
             </ul>
+            
+            <a class="twitter-timeline" data-lang="fr" data-width="400" data-height="400" href="https://twitter.com/CactusEsport?ref_src=twsrc%5Etfw">Tweets by CactusEsport</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            
             <!--<img src="images/Cactus-e-sport-logo.png" width="40%" alt="Logo Cactus Esport">-->
         </div>
     </div>
 </div>
 <br>
+
+{% block footer %}{{ parent() }}{% endblock %}
+
 {% endblock %}
