--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,9 +22,9 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav nav-fill me-auto">
         <li class="nav-item">
-          <a class="nav-link active " href="{{path('shop')}}">Shop</a>
+          <a class="nav-link active" href="{{path('shop')}}">Shop</a>
         </li>
         
         <li class="nav-item">
@@ -35,7 +35,7 @@
           <a class="nav-link active" href="{{path('news')}}">Actualités</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="{{path('about')}}">A propos</a>
+          <a class="nav-link active" href="{{path('about')}}">Staff</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="{{path('contact')}}">Contact</a>
@@ -68,6 +68,8 @@
    
     {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
     {% endblock %}
   </body>
 </html> 
