--- a/templates/base/about.html.twig
+++ b/templates/base/about.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }}A propos{% endblock %}
+{% block title %}{{ parent() }}Staff{% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">A propos</h1>
+    <h1 class="text-center text-primary">Staff</h1>
 
 {% endblock %}
