--- a/templates/base/teams.html.twig
+++ b/templates/base/teams.html.twig
@@ -3,42 +3,17 @@
 {% block title %}{{ parent() }}Nos équipes{% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">Nos équipes</h1>
 
 <div class="container">
-
-    <!--div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Rocket League</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
-      </div>
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Yu-Gi-Oh ! Master Duel</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">Voir l'équipe &raquo;</a></p>
-      </div>
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Tom Clancy's Rainbow Six Siege</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">Voir l'équipe &raquo;</a></p>
-      </div>
-    </div-->
-
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading"><strong>Rocket League</strong></h2>
         <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-        <a class="btn btn-primary" href="{{path('rocket-league')}}" role="button">Détails</a>
+        <a class="btn btn-dark" href="{{path('rocket-league')}}" role="button">Détails</a>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <!--svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg-->
+        <img src="images/rllogo.png" class="d-block w-100" alt="logo Rocket League">
       </div>
     </div>
 
@@ -48,11 +23,10 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading"><strong>Yu-Gi-Oh ! Master Duel</strong></h2>
         <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-        <a class="btn btn-primary" href="{{path('master-duel')}}" role="button">Détails</a>      
+        <a class="btn btn-dark" href="{{path('master-duel')}}" role="button">Détails</a>      
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="images/mdlogo.png" class="d-block w-100" alt="logo Master Duel">
       </div>
     </div>
 
@@ -62,11 +36,10 @@
       <div class="col-md-7">
         <h2 class="featurette-heading"><strong>Tom Clancy's Rainbow Six Siege</strong></h2>
         <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-        <a class="btn btn-primary" href="{{path('rainbow-six')}}" role="button">Détails</a>
+        <a class="btn btn-dark" href="{{path('rainbow-six')}}" role="button">Détails</a>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="images/r6logo.png" class="d-block w-100" alt="logo Rainbow Six Siege">
       </div>
     </div>
 
