add doctrine, pages, and new database field

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,7 @@
 
     <footer class="container">
       <p class="float-end"><a href="#">Revenir en haut de page</a></p>
-      <p>&copy; 2021–2022 Cactus Esport. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="{{path('contact')}}">Contactez-nous</a></p>
+      <p>&copy; 2021–2022 Cactus Esport. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a> &middot; <a href="{{path('join')}}">Rejoignez-nous !</a> &middot; <a href="{{path('contact')}}">Contactez-nous</a></p>
     </footer>
 
     {% endblock %}
