add typo and path

--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -19,7 +19,7 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <p><a class="btn btn-lg btn-primary" href="#">Je postule</a></p>
+            <p><a class="btn btn-lg btn-primary" href="{{path('join')}}">Je postule</a></p>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <p><a class="btn btn-lg btn-primary" href="#">Aller au shop</a></p>
+            <p><a class="btn btn-lg btn-primary" href="{{path('shop')}}">Aller au shop</a></p>
           </div>
         </div>
       </div>
@@ -58,13 +58,7 @@
   ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
-
-    <!-- Three columns of text below the carousel -->
-
-
-
-    <!-- START THE FEATURETTES -->
+  <div class="container marketing p-4">
 
     <hr class="featurette-divider">
 
