--- a/templates/emails/email.html.twig
+++ b/templates/emails/email.html.twig
@@ -10,6 +10,7 @@
 
 <h1>Vous avez un nouveau contact</h1>
 <br />Nom: {{nom}}
+<br />Prénom: {{prenom}}
 <br />Sujet: {{objet}}
 <br />Message:
 <br />{{message | nl2br }}
