--- a/templates/base/contact.html.twig
+++ b/templates/base/contact.html.twig
@@ -4,12 +4,13 @@
 
 {% block body %}
 
+<h2 class="text-primary text-center"><u>Formulaire de contact</u></h2><br>    
+
 
 <div class="container mt-4">
     <div class="row" style="margin: auto;">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h2 class="text-dark text-center"><u>Formulaire de contact</u></h2><br>
-            <h5 class="text-dark text-center">Si vous désirez nous contacter, vous pouvez le faire directement ici<br>via le formulaire de contact ci-dessous !</h5>
+            <h5 class="text-light text-center">Si vous désirez nous contacter, vous pouvez le faire directement ici<br>via le formulaire de contact ci-dessous !</h5>
 
                 {{form_start(form)}}
 
@@ -28,27 +29,24 @@
                 {{form_label(form.message, 'Votre message', {'label_attr':{'class':'fw-bold'}})}}
                 {{form_widget(form.message, {'attr':{'class':'form-control', 'placeholder':'Votre message'}})}}
 
-                {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn bg-primary justify-content-center'}})}}
+                {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn bg-primary mt-3 justify-content-center'}})}}
                 {{form_end(form, {render_rest: true})}} 
         </div>
-        <div class="col-sx-12 col-sm-12 col-md-12 col-lg-6 mt-4 justify-content-center" id="rs">
-            <h5 class="text-dark text-center">Vous pouvez également retrouver ici nos réseaux sociaux !</h5><br>
+        <div class="col-sx-12 col-sm-12 col-md-12 col-lg-6 mt-1 justify-content-center">
+            <h5 class="text-light text-center">Vous pouvez également retrouver ici nos réseaux sociaux !</h5><br>
             <ul class="list-group list-group-flush text-center">
                 <li class="list-group-item">
-                    <a href="https://linktr.ee/CactusEsport" style="text-decoration:none;">
-                    Notre Linktree de nos réseaux sociaux !
+                    <a class="text-light" href="https://linktr.ee/CactusEsport">
+                    Notre Linktree de nos réseaux sociaux !</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="https://discord.gg/ayVfT7zhhd" style="text-decoration:none;">
-                    Rejoins-nous sur notre serveur Discord Communautaire !<span class="emoji">&#127797</span>
+                    <a class="text-light" href="https://discord.gg/ayVfT7zhhd">
+                    Rejoins-nous sur notre serveur Discord Communautaire !</a><span class="emoji">&#127797</span>
                 </li>         
             </ul>
-            
-            <a class="twitter-timeline" data-lang="fr" data-width="400" data-height="400" href="https://twitter.com/CactusEsport?ref_src=twsrc%5Etfw">Tweets by CactusEsport</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+        </div>
     </div>
 </div>
-<br>
 
 {% block footer %}{{ parent() }}{% endblock %}
 
