--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -7,12 +7,6 @@
 <!--div class="d-flex justify-content-center">
   <img src="images/logo.png" class="img-fluid" alt="Logo Cactus Esport" style="position: absolute; max-width: 85%; z-index:1; opacity: 0.08">
 </div-->
-
-<div class="jumbotron m-5">
-  <h1 class="display-4 text-primary text-center"><strong>Cactus Esport</strong></h1>
-  <p class="lead text-light">La Cactus Esport est une association sous loi 1901 promouvant, participant et organisant des évènements de sports électroniques, plus communément appelés esport. Localisée à Beuvry dans le Pas-de-Calais, nos membres viennent des quatre coins de l'hexagone, mais aussi pour certains du Québec. Notre Team a un but fédérateur et communautaire tout en ayant pour ambitions de professionnaliser notre activité.</p>
-</div>
-
 <div>
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -21,19 +15,18 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <!--img src="images/Merzouki.png" class="d-block w-100" alt="logo Cactus Esport"-->
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="images/banniere_recrute.png" class="d-block w-100 img-thumbnail" alt="On recrute chez Cactus Esport">
         <div class="container">
           <div class="carousel-caption">
-            <p><a class="btn btn-lg btn-primary" href="{{path('join')}}">Je postule</a></p>
+            <p><a class="btn btn-block mx-4 btn-primary m-0" href="{{path('join')}}">Je postule</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <img src="images/banniere_shop.png" class="d-block w-100 img-thumbnail" alt="Visite notre shop Cactus Esport">
         <div class="container">
           <div class="carousel-caption">
-            <p><a class="btn btn-lg btn-primary" href="{{path('shop')}}">Aller au shop</a></p>
+            <p><a class="btn btn-block mx-4 btn-primary m-0" href="{{path('shop')}}">Aller au shop</a></p>
           </div>
         </div>
       </div>
@@ -48,6 +41,12 @@
     </button>
   </div>
 </div>
+
+<div class="jumbotron m-5">
+  <h1 class="display-4 text-primary text-center"><strong>Cactus Esport</strong></h1>
+  <p class="lead text-light">La Cactus Esport est une association sous loi 1901 promouvant, participant et organisant des évènements de sports électroniques, plus communément appelés esport. Localisée à Beuvry dans le Pas-de-Calais, nos membres viennent des quatre coins de l'hexagone, mais aussi pour certains du Québec. Notre Team a un but fédérateur et communautaire tout en ayant pour ambitions de professionnaliser notre activité.</p>
+</div>
+
 
 <div class="container mt-5">
     <h1 class="text-center text-primary">Nos équipes</h1>
