--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta author="BECQUAERT Rémi">
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    
    {% block stylesheets %}
 
     <link href="css/main.min.css" rel="stylesheet">
@@ -167,6 +170,7 @@
     {% block javascripts %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
     
     {% endblock %}
   </body>
