--- a/templates/base/contact.html.twig
+++ b/templates/base/contact.html.twig
@@ -6,28 +6,31 @@
 
 <h2 class="text-primary text-center"><u>Formulaire de contact</u></h2><br>    
 
-
 <div class="container mt-4">
-    <div class="row" style="margin: auto;">
+    <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
             <h5 class="text-light text-center">Si vous désirez nous contacter, vous pouvez le faire directement ici<br>via le formulaire de contact ci-dessous !</h5>
+            <h5 class="text-light text-center"><span class="emoji">&#9888</span>Aucune demande de recrutement ne sera prise en compte ici,<br/> voir <a href="{{path('join')}}">la page de recrutement</a></h5>
+
+            <hr class="featurette-divider text-light">    
+
 
                 {{form_start(form)}}
 
-                {{form_label(form.email, 'Votre adresse-mail', {'label_attr':{'class':'fw-bold'}})}}
-                {{form_widget(form.email, {'attr':{'class':'form-control', 'placeholder':'Votre adresse-mail'}})}}
+                {{form_label(form.email, 'Votre adresse-mail', {'label_attr':{'class':'fw-bold text-light'}})}}
+                {{form_widget(form.email, {'attr':{'class':'form-control text-light', 'placeholder':'Votre adresse-mail', 'maxlength':'80', 'type':'email'}})}}
 
-                {{form_label(form.nom, 'Votre nom', {'label_attr':{'class':'fw-bold'}})}}
-                {{form_widget(form.nom, {'attr':{'class':'form-control', 'placeholder':'Votre nom'}})}}
+                {{form_label(form.nom, 'Votre nom', {'label_attr':{'class':'fw-bold text-light'}})}}
+                {{form_widget(form.nom, {'attr':{'class':'form-control text-light', 'placeholder':'Votre nom', 'maxlength':'50'}})}}
 
-                {{form_label(form.prenom, 'Votre prénom', {'label_attr':{'class':'fw-bold'}})}}
-                {{form_widget(form.prenom, {'attr':{'class':'form-control', 'placeholder':'Votre prénom'}})}}
+                {{form_label(form.prenom, 'Votre prénom', {'label_attr':{'class':'fw-bold text-light'}})}}
+                {{form_widget(form.prenom, {'attr':{'class':'form-control text-light', 'placeholder':'Votre prénom', 'maxlength':'50'}})}}
 
-                {{form_label(form.objet, 'Saisir l\'objet du message', {'label_attr':{'class':'fw-bold'}})}}
-                {{form_widget(form.objet, {'attr':{'class':'form-control', 'placeholder':'Objet'}})}}
+                {{form_label(form.objet, 'Saisir l\'objet du message', {'label_attr':{'class':'fw-bold text-light'}})}}
+                {{form_widget(form.objet, {'attr':{'class':'form-control text-light', 'placeholder':'Objet', 'maxlength':'100'}})}}
 
-                {{form_label(form.message, 'Votre message', {'label_attr':{'class':'fw-bold'}})}}
-                {{form_widget(form.message, {'attr':{'class':'form-control', 'placeholder':'Votre message'}})}}
+                {{form_label(form.message, 'Votre message', {'label_attr':{'class':'fw-bold text-light'}})}}
+                {{form_widget(form.message, {'attr':{'class':'form-control text-light', 'placeholder':'Votre message'}})}}
 
                 {{form_widget(form.bouton, {'label':"Soumettre le formulaire", 'attr':{'class':'btn bg-primary mt-3 justify-content-center'}})}}
                 {{form_end(form, {render_rest: true})}} 
