--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -17,7 +17,7 @@
       <div class="carousel-item active">
         <img src="images/banniere_recrute.png" class="d-block w-100 img-thumbnail" alt="On recrute chez Cactus Esport">
         <div class="container">
-          <div class="carousel-caption">
+          <div class="carousel-caption text-right">
             <p><a class="btn btn-block mx-4 btn-primary m-0" href="{{path('join')}}">Je postule</a></p>
           </div>
         </div>
@@ -25,7 +25,7 @@
       <div class="carousel-item">
         <img src="images/banniere_shop.png" class="d-block w-100 img-thumbnail" alt="Visite notre shop Cactus Esport">
         <div class="container">
-          <div class="carousel-caption">
+          <div class="carousel-caption text-right">
             <p><a class="btn btn-block mx-4 btn-primary m-0" href="{{path('shop')}}">Aller au shop</a></p>
           </div>
         </div>
@@ -50,8 +50,6 @@
 
 <div class="container mt-5">
     <h1 class="text-center text-primary">Nos équipes</h1>
-    <hr class="featurette-divider">    
-
     <div class="row featurette p-4">
       <div class="col-md-7">
         <h2 class="featurette-heading text-primary"><strong>Rocket League</strong></h2>
@@ -63,7 +61,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider text-light">
 
     <div class="row featurette p-4">
       <div class="col-md-7 order-md-2">
@@ -76,7 +74,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider text-light">
 
     <div class="row featurette p-4">
       <div class="col-md-7">
@@ -89,7 +87,7 @@
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider text-light">
 
 </div>
 
