--- a/templates/base/about.html.twig
+++ b/templates/base/about.html.twig
@@ -15,6 +15,12 @@
   </p>
 </div>
 
+  <div class="jumbotron m-5">
+    <h1 class="display-4 text-primary text-center"><strong>Cactus Esport</strong></h1>
+    <p class="lead text-light">La Cactus Esport est une association sous loi 1901 promouvant, participant et organisant des évènements de sports électroniques, plus communément appelés esport. Localisée à Beuvry dans le Pas-de-Calais, nos membres viennent des quatre coins de l'hexagone, mais aussi pour certains du Québec. Notre Team a un but fédérateur et communautaire tout en ayant pour ambitions de professionnaliser notre activité.</p>
+  </div>
+
+
   <div class="container marketing p-4">
 
     <hr class="featurette-divider">
